# my_cool_data_catalog

./: .gitignore  README.md  docker-compose.yml
.github/: CODEOWNERS
backend/: Cargo.toml  Dockerfile  crontab.txt  profiles.yml
backend/cache/: enriched_manifest.json  refresh_cache.sh
backend/scripts/: enrich_manifest.py
backend/src/: dbt.rs  lineage.rs  main.rs  models.rs  routes.rs  utils.rs
backend/src/data/: manifest.json
deploy/aws/: ecs-task.json
deploy/k8s/: deployment.yaml
frontend/: .env  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: Graph.jsx  Header.jsx  Layout.jsx  LineageGraph.jsx  ModelsList.jsx  Sidebar.jsx
frontend/src/pages/: DataSourcesPage.jsx  HomePage.jsx  LineagePage.jsx  ModelDetails.jsx  ModelDetailsPage.jsx  ModelMetadataPage.jsx  ModelSearchPage.jsx
